# learn_openai_whisper

./: .gitignore
app/: README.md  pyproject.toml
app/app/: main.py
app/src/: main.py  transcription_response.py
