[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Manh Pham <manhpham90vn@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faster-whisper = "^1.1.0"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
